// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginHeader should render properly 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 kWnglb bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
        data-testid="PluginImage"
      >
        <svg>
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex flex-col justify-between pl-8 w-full min-w-0"
      >
        <div
          class="flex justify-between items-end"
        >
          <div
            class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span
                class="text-2xl font-bold truncate"
              >
                Test Plugin
              </span>
            </div>
            <span
              class="text-medium text-theme-secondary-500 truncate"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    circle-exclamation-mark.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-17ehhxk-0 ijSFXJ border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-6 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Author
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span
                    class="font-semibold text-theme-secondary-text truncate max-w-48"
                  >
                    Payvo
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Category
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Website
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <a
                    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                    data-ring-focus-margin="-m-1"
                    data-testid="PluginSpecs__website"
                    href="#"
                    rel="noopener noreferrer"
                    to="https://github.com/arkecosystem"
                  >
                    <span
                      class="Link__Content-sc-ec014t-1 hUiuRR"
                    >
                      <span>
                        View
                      </span>
                    </span>
                    <div
                      class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                      data-testid="Link__external"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </a>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span>
                    Not installed
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-6 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Size
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span
                    data-testid="PluginSpecs__size"
                  >
                    4.2 Mb
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Version
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  1.3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginHeader should render updating plugin 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 hqpRvv bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
        data-testid="PluginImage"
      >
        <svg
          height="40"
          viewBox="0 0 40 40"
          width="40"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="18.5"
            stroke="var(--theme-color-success-800)"
            stroke-width="3"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="18.5"
            stroke="var(--theme-color-success-600)"
            stroke-dasharray="116.23892818282235"
            stroke-dashoffset="92.99114254625788"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            transform="rotate(-90 20 20)"
          />
          <text
            data-testid="CircularProgressBar__percentage"
            dy="0.3em"
            fill="var(--theme-color-success-600)"
            font-size="0.8rem"
            font-weight="600"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            <tspan>
              20
              <tspan
                dy="-0.6em"
                font-size="0.4rem"
                font-weight="bold"
              >
                %
              </tspan>
            </tspan>
          </text>
        </svg>
        <p
          class="text-sm font-semibold text-theme-success-600"
          data-testid="PluginImage__updating__label"
        >
          Updating...
        </p>
      </div>
      <div
        class="flex flex-col justify-between pl-8 w-full min-w-0"
      >
        <div
          class="flex justify-between items-end"
        >
          <div
            class="flex overflow-hidden flex-col mr-8 space-y-2 leading-tight"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span
                class="text-2xl font-bold truncate"
              >
                Test Plugin
              </span>
            </div>
            <span
              class="text-medium text-theme-secondary-500 truncate"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    circle-exclamation-mark.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-17ehhxk-0 ijSFXJ border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-6 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Author
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span
                    class="font-semibold text-theme-secondary-text truncate max-w-48"
                  >
                    Payvo
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Category
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Website
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <a
                    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                    data-ring-focus-margin="-m-1"
                    data-testid="PluginSpecs__website"
                    href="#"
                    rel="noopener noreferrer"
                    to="https://github.com/arkecosystem"
                  >
                    <span
                      class="Link__Content-sc-ec014t-1 hUiuRR"
                    >
                      <span>
                        View
                      </span>
                    </span>
                    <div
                      class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                      data-testid="Link__external"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </a>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span>
                    Not installed
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-6 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Size
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  <span
                    data-testid="PluginSpecs__size"
                  >
                    4.2 Mb
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Version
                </span>
                <span
                  class="font-semibold text-theme-secondary-text"
                >
                  1.3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
